--- a/templates/index.html
+++ b/templates/index.html
@@ -20,18 +20,20 @@
 
         </div>
         
-        <div class="chat-input">
-            <div class="input-section">
-                <input type="text" id="text-input" placeholder="Type here..." autofocus name="user-input">
-            </div>
-            
-            <button class="send" type="submit">
-                <i class="bi bi-send"></i>
-            </button>
+            <div class="chat-input">
+                <div class="input-section">
+                    <input type="text" id="text-input" placeholder="Type here..." autofocus name="user-input">
+                </div>
+                
+                <button class="send" type="submit">
+                    <i class="bi bi-send"></i>
+                </button>
 
-        </div>
+            </div>
+       
       
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="../static/response.js" ></script>
     <script src="../static/app.js" ></script>
 </body>
