--- a/templates/index.html
+++ b/templates/index.html
@@ -10,28 +10,30 @@
     
 </head>
 <body>
-    <div class="container">
-        <div class="chat-header">
-            <img src="../static/img/logo.png" alt="" class="logo">
-            <div class="title">AI CHAT</div>
-        </div>
-        <div class="chat-body">
-            
-
-        </div>
-        
-            <div class="chat-input">
-                <div class="input-section">
-                    <input type="text" id="text-input" placeholder="Type here..." autofocus name="user-input">
-                </div>
+    <div class="main">
+        <div class="container">
+            <div class="chat-header">
+                <img src="../static/img/logo.png" alt="" class="logo">
+                <div class="title">AI CHAT</div>
+            </div>
+            <div class="chat-body">
                 
-                <button class="send" type="submit">
-                    <i class="bi bi-send"></i>
-                </button>
 
             </div>
-       
-      
+            
+                <div class="chat-input">
+                    <div class="input-section">
+                        <input type="text" id="text-input" placeholder="Type here..." autofocus name="user-input">
+                    </div>
+                    
+                    <button class="send" type="submit">
+                        <i class="bi bi-send"></i>
+                    </button>
+
+                </div>
+        
+        
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="../static/response.js" ></script>
