adjusting responsive styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             
                 <div class="chat-input">
                     <div class="input-section">
-                        <input type="text" id="text-input" placeholder="Type here..." autofocus name="user-input">
+                        <input type="text" id="text-input" placeholder="Type here..."  name="user-input">
                     </div>
                     
                     <button class="send" type="submit">
