--- a/static/style.css
+++ b/static/style.css
@@ -21,8 +21,10 @@ body{
 
 .container{
     background-color: #fff;
-    height: 450px;
-    width: 320px;
+    max-height: 450px;
+    max-width: 320px;
+    height: 70vh;
+    width: 30vw;
     position: fixed;
     bottom: 50px;
     right: 10px;
@@ -51,7 +53,8 @@ body{
 
 
 .chat-body{
-    height: 300px;
+    max-height: 300px;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     padding: 8px 10px;
@@ -82,6 +85,7 @@ body{
     border: none;
     outline: none;
     caret-color: black;
+    overflow-wrap: normal;
 }
 
 button{
